[metadata]
name = now_utils
description = Collection of Utilities and Tools for FPGA Now
classifiers = Programming Language :: Python
version=0.0.2

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.11

[options.entry_points]
console_scripts =
    ip_export = now_utils.ip_export:main
